<resources>
    <string name="app_name">myapp</string>
    <string name="menu">Menu</string>
    <string name="welcome_to_travel_sri_lanka">welcome to Travel Sri Lanka</string>
    <string name="hotel">Hotel</string>
    <string name="todo">TODO</string>
    <string name="transport">transport</string>
    <string name="todo1">TODO</string>
    <string name="profile">Profile</string>
    <string name="propic">TODO</string>
    <string name="things_to_do">Things TO do</string>
    <string name="todopicture">TODO</string>
    <string name="textview">TextView</string>
    <string name="ella">ella</string>
</resources>